[tool.poetry]
name = "cefspark"
version = "0.1.0"
description = "GUI toolkit for embedding a Chromium widget in desktop applications"
authors = ["Jiho Lee <search5@gmail.com>"]
readme = ["README.rst", "CHANGELOG.rst", "LICENSE"]
keywords = ["cefpython"]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Multimedia",
    "Topic :: Software Development :: User Interfaces"
]
repository = "https://github.com/search5/cefspark"
# packages = [{ include = "poetry_cython_example" }]
include = [{ path = "cefspark/**/*.so", format = "wheel" }]
#script = "tools/build.py"

[tool.poetry.build]
generate-setup-file = false
script = "tools/build.py"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
sphinx = "^7.2.6"


[build-system]
requires = ["poetry-core", "setuptools", "Cython", "packaging", "numpy", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"
