[metadata]
name = cef
version = 0.0.1
author = Lee Ji-Ho
author_email = search5@gmail.com
description = file: description.rst
long_description = file: README.rst, CHANGELOG.rst, LICENSE
keywords = cefpython
license = BSD-3-Clause
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Desktop Environment
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Browsers
    Topic :: Multimedia
    Topic :: Software Development :: User Interfaces
url = https://github.com/search5/cefpython
download_url = https://github.com/search5/cefpython/releases
# platforms = ["{{SYSCONFIG_PLATFORM}}"]

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    cython
